--- a/foodie-cas/src/main/resources/templates/login.html
+++ b/foodie-cas/src/main/resources/templates/login.html
@@ -12,6 +12,6 @@
             <input type="hidden" name="returnUrl" placeholder="请输入用户名"/>
             <input type="submit" value="提交登录" />
         </form>
-        <span style="color: red" th:text="${errmsg}"></span>
+        <span style="color: red" th:text="${errorMsg}"></span>
     </body>
 </html>
