--- a/foodie-cas/src/main/resources/templates/login.html
+++ b/foodie-cas/src/main/resources/templates/login.html
@@ -9,7 +9,7 @@
         <form action="doLogin" method="post">
             <input type="text" name="username" placeholder="请输入用户名"/>
             <input type="password" name="password" placeholder="请输入密码"/>
-            <input type="hidden" name="returnUrl" placeholder="请输入用户名"/>
+            <input type="hidden" name="returnUrl" th:value="${returnUrl}"/>
             <input type="submit" value="提交登录" />
         </form>
         <span style="color: red" th:text="${errorMsg}"></span>
